# Atmospect-raw

./: .gitignore  LICENSE.md
Atmospect/: weblink.lxq
AtmospectLauncher/assets/svg/: vanilla.svgz
AtmospectLauncher/net/atmdwsvc/: Cargo.toml  build.rs
AtmospectLauncher/net/atmdwsvc/src/: main.rs
AtmospectLauncher/org/: resources.json  weblink.lxq
net/p2tool/: build.bat  demo.bat
net/p2tool/src/: main.rs
net/workinrpogress/: SVG2SVGZ.py  SVGCompress.py
org/assets/AtmospectLauncher/: Coalition
s3/py/: JPGMetaCreationTool.py
