[package]
name = "atmdwsvc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ureq = { version = "2.12.1", default-features = false, features = ["tls"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
